# dogs-flies-ISR

./: .gitignore  .gitmodules  Makefile  README.md  crazyswarm.sh
crazyswarm2/.github/workflows/: systemtests.yml
crazyswarm2/crazyflie/scripts/: cfmult.py  gui.py
crazyswarm2/crazyflie/urdf/: crazyflie_description.urdf
crazyswarm2/crazyflie_examples/: setup.cfg
crazyswarm2/crazyflie_examples/crazyflie_examples/: figure8.py  form_goto.py  group_mask.py  infinite_flight.py  send_coords.py  set_param.py  utils.py
crazyswarm2/crazyflie_examples/crazyflie_examples/data/multi_trajectory/: traj0.csv
crazyswarm2/crazyflie_examples/launch/: multiranger_mapping_launch.py  multiranger_simple_mapper_launch.py
crazyswarm2/docs2/: faq.rst  overview.rst
crazyswarm2/systemtests/: multi_trajectory_ideal_traj0.csv  plotter_class.py  test_flights.py
docs/: Jetson_case_Bottom.step  Jetson_case_Top.step  ZedM_case_Bottom.step  ZedM_case_Pad.step  ZedM_case_Top.step
ros2_ws/: .gitignore
ros2_ws/src/unitree_ros2-main/: README.md
src/: .gitignore
src/flies/: configure.py  drone_controller.py  drones.json  environ_controller.py  main.py  position.py  requirements.txt
src/mavsdk/: package.xml  setup.cfg  setup.py
src/unitree_ros/: CMakeLists.txt  package.xml
testbox/flies/: PX4_test.py  drone_controller.py  drones.json  environ_controller.py  formation.py  game_controller.py  logs.txt  main.py  position.py  requirements.txt  test_connection.py  test_publisher.py  test_subscriber.py
testbox/objID.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
(+61 files in other folders)
